peac_dev/force-app/main/default/objects/Bank_Statement__c/Bank_Statement__c.object-meta.xml
<CustomObject>
    <label>Bank Statement</label>
    <nameField>
        <displayFormat>STMT-{0000000}</displayFormat>
        <label>Bank Statement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bank Statements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>