peac_dev/force-app/main/default/objects/Bank_Statement__c/fields/Amount_of_Deposits__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_Deposits__c</fullName>
    <label>Amount of Deposits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>