peac_dev/force-app/main/default/objects/Bank_Statement__c/fields/Bank_Information__c.field-meta.xml
<CustomField>
    <fullName>Bank_Information__c</fullName>
    <label>Bank Information</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Financial_Bank_Information__c.Opportunity__c</field>
            <operation>equals</operation>
            <valueField>$Source.Opportunity__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Financial_Bank_Information__c</referenceTo>
    <relationshipLabel>Bank Statements</relationshipLabel>
    <relationshipName>Bank_Statements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>