peac_dev/force-app/main/default/objects/Bank_Statement__c/fields/Bank_Statement_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Bank_Statement_External_Id__c</fullName>
    <description>Store Bank Statement External Id</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Bank Statement External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>