peac_dev/force-app/main/default/objects/Bank_Statement__c/fields/CaseCenter__c.field-meta.xml
<CustomField>
    <fullName>CaseCenter__c</fullName>
    <formula>Opportunity__r.CaseCenter__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CaseCenter #</label>
    <type>Text</type>
</CustomField>