peac_dev/force-app/main/default/objects/Bank_Statement__c/fields/Daily_Average_Balance__c.field-meta.xml
<CustomField>
    <fullName>Daily_Average_Balance__c</fullName>
    <label>Daily Average Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>