peac_dev/force-app/main/default/objects/Bank_Statement__c/fields/Indicator__c.field-meta.xml
<CustomField>
    <fullName>Indicator__c</fullName>
    <description>Value coming from the Bank Information Object Indicator Field.</description>
    <formula>TEXT(Bank_Information__r.Indicator__c)</formula>
    <label>Indicator</label>
    <type>Text</type>
</CustomField>