peac_dev/force-app/main/default/objects/Bank_Statement__c/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Month</label>
    <type>Date</type>
</CustomField>