peac_dev/force-app/main/default/objects/Bank_Statement__c/fields/Negative_Days__c.field-meta.xml
<CustomField>
    <fullName>Negative_Days__c</fullName>
    <label>Negative Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>