peac_dev/force-app/main/default/objects/Bank_Statement__c/fields/NSFs__c.field-meta.xml
<CustomField>
    <fullName>NSFs__c</fullName>
    <label>NSFs</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>