peac_dev/force-app/main/default/objects/Bank_Statement__c/fields/Number_of_Deposits__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Deposits__c</fullName>
    <label>Number of Deposits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>