peac_dev/force-app/main/default/objects/Bank_Statement__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Bank Statements</relationshipLabel>
    <relationshipName>Bank_Statements</relationshipName>
    <type>Lookup</type>
</CustomField>