peac_dev/force-app/main/default/objects/Bank_Statement__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <formula>TEXT( Bank_Information__r.Order__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order</label>
    <type>Text</type>
</CustomField>