peac_dev/force-app/main/default/objects/Bank_Statement__c/fields/Suspicious_Activity__c.field-meta.xml
<CustomField>
    <fullName>Suspicious_Activity__c</fullName>
    <description>Store suspicious activity from Ocrolus</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Suspicious Activity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>