peac_dev/force-app/main/default/objects/Bank_Statement__c/fields/Total_Adjustment_Deduction__c.field-meta.xml
<CustomField>
    <fullName>Total_Adjustment_Deduction__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Adjustment Deduction</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>